Fix preview icons on Safari
Close #1

--- a/styles/_page-previews.scss
+++ b/styles/_page-previews.scss
@@ -30,7 +30,7 @@
   }
 
   .icon {
-
+    width: 20px;
   }
 
   .description {
